// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render a ListView with children 1`] = `
<List
  isDivided={false}
>
  <Item
    comment={
      <ItemComment
        isTruncated={false}
        text="test comment"
      />
    }
    endAccessory={
      <p>
        E
      </p>
    }
    hasEndAccessory={true}
    hasStartAccessory={true}
    index={0}
    isSelectable={false}
    isSelected={false}
    listItemStyles={Object {}}
    startAccessory={
      <p>
        S
      </p>
    }
    view="list"
  >
    <ItemDisplay
      isTruncated={false}
      text="Display 1"
    />
  </Item>
</List>
`;

exports[`should render a ListView with list styles 1`] = `
<List
  isDivided={true}
>
  <Item
    comment={
      <ItemComment
        isTruncated={false}
        text="test comment"
      />
    }
    endAccessory={
      <p>
        E
      </p>
    }
    hasEndAccessory={true}
    hasStartAccessory={true}
    index={0}
    isSelectable={false}
    isSelected={false}
    listItemStyles={Object {}}
    startAccessory={
      <p>
        S
      </p>
    }
    view="list"
  >
    <ItemDisplay
      isTruncated={false}
      text="Display 1"
    />
  </Item>
</List>
`;

exports[`should render a default ListView 1`] = `
<List
  isDivided={false}
/>
`;
